app/assets/stylesheets/_navbar.scss
nav {
  height: 80px;
  position: fixed;
  top: 0;
  z-index: 9999;
  box-shadow: none;
  border-bottom: 1px solid #eeeeee;
  transition: top 0.2s ease-in-out;
}

nav ul li:hover, .dropdown-content li:hover, ul.side-nav li:hover {
  background: #f5f5f5;
}

nav a, nav ul a, .dropdown-content a, nav .brand-logo, ul.side-nav li a {
  text-transform: lowercase;
  color: #9e9e9e;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
  font-variant: small-caps;
  text-transform: lowercase;
  font-size: 1.05em;

  &.active {
    color: #8bc34a;
    font-weight: bold;
  }

}

nav .title {
  @extend .brown-text, .darken-3;
  font-family: "Open Sans";
  font-size: 1.5em;
  font-variant: small-caps;
  text-transform: lowercase;
  position: relative;
  font-weight: bold;
  left: 75px;
  line-height: 75px;
}

nav img.brand-logo {
  width: 64px;

  &:hover {
    opacity: 0.85;
  }
}
.logo img:hover {
  opacity: 0.85;
}

@media (max-width: 992px) {
  nav {
    z-index: 999;
  }
  .dropdown-content {
    z-index: 1000;
  }
  // nav {
  //   position: absolute;
  // }
  // body.nav-on {
  //   margin-top: 20px;
  // }
  ul.side-nav {
    box-shadow: none;
    border-right: 1px solid #eeeeee;
  }
}

.dropdown-content {
  box-shadow: none;
  border: 1px solid #eeeeee;
  z-index: 10000;
}

.dropdown-content li {
  text-align: center;
  font-size: 1rem;
}

.button-collapse, .brand-logo {
  font-weight: bold;
  text-transform: lowercase;
  font-variant: small-caps;
}

.button-collapse:hover, .brand-logo:hover {
  color: #8bc34a;
}

.nav-off nav {
  display: none;
  visibility: hidden;
}

.nav-up {
  top: -81px;
}

